# pii-shield

./: .env.sample  .gitignore  PROMPT.md  README.ko.md  README.md  init.sh  install_uv.sh  pyproject.toml  quickstart.sh
.devcontainer/: devcontainer.json
app/: __init__.py  api.py  cli.py
bench/: __init__.py  validation.py
bench/en/: dataset.csv  validation.py
bench/ko/: dataset.csv  validation.py
core/: __init__.py  azure_pii.py  detector.py  env_config.py  masker.py  shield.py
core/config/: __init__.py  recognizers_en.yaml  recognizers_ko.yaml
core/recognizers/: __init__.py  korean.py
eval/: __init__.py  dataset.py  evaluator.py  metrics.py
examples/: hello_world.py
samples/: __init__.py  azure_only_example.py  azure_pii_example.py  basic_usage.py  custom_recognizer.py  dual_detection_example.py  env_config_example.py  evaluation_example.py  korean_case.py  mask_only_demo.py  shield_azure_example.py  strict_merge_demo.py
src/pii_shield/: __init__.py  hello.py
tests/: __init__.py  test_azure_pii.py  test_detector.py  test_evaluator.py  test_hello.py  test_masker.py  test_shield.py
